--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>hello git</h1>
+    <h1 class="one">hello git</h1>
 </body>
 </html>
