--- a/index.html
+++ b/index.html
@@ -16,5 +16,19 @@
             <p> <i class="fa-regular fa-moon"></i> &nbsp Dark Mode</p>
             </div>
         </header>
+        <main class="main">
+            <div class="countries-container">
+                   <div class="country-card">
+                      <img src="https://flagcdn.com/au.svg" alt="Australia">
+                      
+                      <div class="card-text">
+                        <h3>Australia</h3>
+                      <p><b>Population: </b>25,687,041</p>
+                      <p><b>Region: </b>Oceania</p>
+                      <p><b>Capital: </b>Canberra</p>
+                    </div>
+                   </div>
+            </div>
+        </main>
 </body>
 </html>
